--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<h1>Coming Soon!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Do I Own That? App</title>
+
+	<!-- SEO -->
+
+    <meta name="description" content=""/>
+    <meta name="keywords" content="mobile, app, movies, library"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- CSS -->
+
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  	<link rel="stylesheet" href="assets/css/animate.css" />
+
+	<!-- Fonts -->
+
+  </head>
+
+  <body>
+    <div id="wrap">
+      <div id="contain">
+        <div class="animated fadeIn" id="content">
+
+          <img class="avatar hover" src="assets/img/AppIcon.svg" alt="App Icon"/>
+          <h5>COMING SOON</h5>
+          <h1>Do I Own That?</h1>
+          <p id="intro">Catalog all your movies no matter where you store them… cloud, digital or disc we’ve got you covered.</p>
+
+          <p class="animated fadeInUp">
+          <!--<a href="#" class="button">SIGN UP FOR THE BETA</a>-->
+          </p>
+        </div>
+
+        <div class="animated fadeInUp"><img src="assets/img/app-screen-1.png" /></div>
+
+      </div>
+    </div>
+
+  </body>
+</html>
