--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p id="intro">Catalog all your movies no matter where you store them… cloud, digital or disc we’ve got you covered.</p>
 
           <p class="animated fadeInUp">
-          <!--<a href="#" class="button">SIGN UP FOR THE BETA</a>-->
+          <a href="mailto:hello@doiownth.at?subject=Request%20Beta%20Access" class="button">SIGN UP FOR THE BETA</a>
           </p>
         </div>
 
