--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   	<link rel="stylesheet" href="assets/css/animate.css" />
 
 	<!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald:200" rel="stylesheet">
 
   </head>
 
@@ -29,12 +30,12 @@
           <h1>Do I Own That?</h1>
           <p id="intro">Catalog all your movies no matter where you store them… cloud, digital or disc we’ve got you covered.</p>
 
-          <p class="animated fadeInUp">
+          <p class="animated fadeIn">
           <a href="mailto:hello@doiownth.at?subject=Request%20Beta%20Access" class="button">SIGN UP FOR THE BETA</a>
           </p>
         </div>
 
-        <div class="animated fadeInUp"><img src="assets/img/app-screen-1.png" /></div>
+        <div class="animated fadeInUp"><img src="assets/img/app-screen-1.png" width="375" /></div>
 
       </div>
     </div>
