Changed from Coming page to live page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<!-- SEO -->
 
-    <meta name="description" content=""/>
+    <meta name="description" content="Do I Own That? is perfect for those like myself with huge movie collections spread out across various formats and services with no easy way to keep track of them all.  Do I Own That? is unique in that not only does it let you save movies to your library but you can also tag them with custom labels like Blu-ray, iTunes, Hard Drive, and more. Don't accidentally rent a movie you already own again! Start watching your movies faster by knowing exactly where you bought them. Cloud, digital or disc we've got you covered! Try Do I Own That? today."/>
     <meta name="keywords" content="mobile, app, movies, library"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,12 +26,11 @@
         <div class="animated fadeIn" id="content">
 
           <img class="avatar hover" src="assets/img/AppIcon.svg" alt="App Icon"/>
-          <h5>COMING SOON</h5>
           <h1>Do I Own That?</h1>
           <p id="intro">Catalog all your movies no matter where you store them… cloud, digital or disc we’ve got you covered.</p>
 
           <p class="animated fadeIn">
-          <a href="mailto:hello@doiownth.at?subject=Request%20Beta%20Access" class="button">SIGN UP FOR THE BETA</a>
+          <a href="https://appsto.re/us/uTX-kb.i" class="button">GET IT NOW ON THE APP STORE</a>
           </p>
         </div>
 
