tweaked seo description

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 	<!-- SEO -->
 
-    <meta name="description" content="Do I Own That? is perfect for those like myself with huge movie collections spread out across various formats and services with no easy way to keep track of them all.  Do I Own That? is unique in that not only does it let you save movies to your library but you can also tag them with custom labels like Blu-ray, iTunes, Hard Drive, and more. Don't accidentally rent a movie you already own again! Start watching your movies faster by knowing exactly where you bought them. Cloud, digital or disc we've got you covered! Try Do I Own That? today."/>
-    <meta name="keywords" content="mobile, app, movies, library"/>
+    <meta name="description" content="Do I Own That? is the perfect app for those like myself with huge movie collections spread out across various formats and services with no easy way to keep track of them all.  Do I Own That? is unique in that not only does it let you save movies to your library but you can also tag them with custom labels like Blu-ray, iTunes, Hard Drive, and more. Don't accidentally rent a movie you already own again! Start watching your movies faster by knowing exactly where you bought them. Cloud, digital or disc we've got you covered! Try Do I Own That? today."/>
+    <meta name="keywords" content="mobile, app, movies, library, catalog, database, organize, labels, tags, bluray, itunes, vudu, amazon, google play"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- CSS -->
