added android coming soon link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           <p id="intro">Catalog all your movies no matter where you store them… cloud, digital or disc we’ve got you covered.</p>
 
           <p class="animated fadeIn">
-          <a href="https://appsto.re/us/uTX-kb.i" class="button">GET IT NOW</a>
+          	<a href="https://appsto.re/us/uTX-kb.i" class="button">GET IT NOW</a>
+		<br>
+		Android Coming Soon!<a href="mailto:hello@doiownth.at">Be Notified.</a>
           </p>
         </div>
 
