--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p class="animated fadeIn">
           	<a href="https://appsto.re/us/uTX-kb.i" class="button">GET IT NOW</a>
 		<br>
-		Android Coming Soon!<a href="mailto:hello@doiownth.at"> Be Notified.</a>
+		  <small>Android Coming Soon!<a href="mailto:hello@doiownth.at"> Be Notified.</a></small>
           </p>
         </div>
 
